=== 2.1 / ??

* Minor Enhancement
  * For HTTPS connections, SSL sessions are now reused avoiding the extra
    round trips and computations of extra SSL handshakes.  If you have
    problems with SSL session reuse it can be disabled by
    Net::HTTP::Persistent#reuse_ssl_sessions

=== 2.0 / 2011-08-26

* Incompatibility
  * Net::HTTP::Persistent#verify_mode now defaults to
    OpenSSL::SSL::VERIFY_PEER.  This may cause HTTPS request failures if your
    default certificate store lacks the correct certificates.

=== 1.9 / 2011-08-26

* Minor Enhancement
  * Added Net::HTTP::Persistent#cert_store to set an SSL certificate store
    which defaults to the OpenSSL default certificate store.

    HTTPS server certificates will be validated when this option is combined
    with setting Net::HTTP::Persistent#verify_mode to
    OpenSSL::SSL::VERIFY_PEER.

=== 1.8.1 / 2011-08-08

* Bug Fix
  * Requests with OpenSSL errors are retried now.  Pull Request #5 by James
    Tucker.

=== 1.8 / 2011-06-27

* Minor Enhancement
  * Added Net::HTTP::Persistent#retry_change_requests which allows POST and
    other non-idempotent requests to be retried automatically.  Take care when
    enabling this option to ensure the server will handle multiple POSTs with
    the same data in a sane manner.

=== 1.7 / 2011-04-17

* Minor Enhancement
  * Added Net::HTTP::Persistent#pipeline which integrates with
    net-http-pipeline when it is present.
* Bug Fix
  * Perform a case-insensitive check of the URI scheme for HTTPS URIs

=== 1.6.1 / 2011-03-08

* Bug Fix
  * Net::HTTP::Persistent#request now handles Errno::EINVAL as a connection
    reset and will be retried for idempotent requests.  Reported by Aaron
    Qian.

=== 1.6 / 2011-03-01

* Minor Enhancement
  * Added Net::HTTP::Persistent#socket_options to set multiple socket options
    at socket startup.

=== 1.5.2 / 2011-02-24

* Bug Fix
  * Only set TCP_NODELAY if the connection has an @socket.  Allows